# twintalk

./: .gitignore  Cargo.toml  FEASIBILITY_PLAN.md  Makefile  README.md  TODO.md
.claude/: settings.local.json
.github/workflows/: ci.yml  rust-ci.yml
crates/twintalk-api/: Cargo.toml
crates/twintalk-api/src/: lib.rs
crates/twintalk-core/: Cargo.toml
crates/twintalk-core/examples/: basic_twin.rs
crates/twintalk-core/src/: adt.rs  event.rs  lib.rs  message.rs  runtime.rs  twin.rs  value.rs
crates/twintalk-core/src/storage/: memory_store.rs  mod.rs  sled_store.rs
crates/twintalk-core/tests/: api_usage_examples.rs  event_store_tests.rs  fleet_prediction_poc.rs  message_tests.rs  runtime_tests.rs  twin_tests.rs  value_tests.rs
crates/twintalk-supervisor/: Cargo.toml
crates/twintalk-supervisor/src/: lib.rs
docs/: DEPENDENCIES_ANALYSIS.md  FEASIBILITY_PLAN.md  FEASIBILITY_SUMMARY.md  MINIMAL_SMALLTALK_DECISION.md  TEST_SUMMARY.md
experiments/: PERFORMANCE_RESULTS.md  README.md
experiments/prototype-patterns/: Cargo.toml
experiments/prototype-patterns/src/: trait_objects.rs
experiments/smalltalk-integration/: Cargo.toml  MINIMAL_SMALLTALK.md
experiments/smalltalk-integration/src/: mini_interpreter.rs  minimal_smalltalk.rs  rhai_experiment.rs  som_experiment.rs  twin_inspector.rs
experiments/state-model/: Cargo.toml
experiments/state-model/src/: event_sourced.rs  lazy_twins.rs
