[package]
name = "twintalk-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core digital twin runtime engine"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }

# Smalltalk DSL parsing
nom = { workspace = true }

# Alternative scripting engines to evaluate
rhai = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
rhai-backend = ["rhai"]

[[bench]]
name = "twin_operations"
harness = false