[package]
name = "prototype-patterns-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trait-objects"
path = "src/trait_objects.rs"

[[bin]]
name = "delegation"
path = "src/delegation.rs"

[[bin]]
name = "dynamic-slots"
path = "src/dynamic_slots.rs"

[dependencies]
# Dynamic typing
dyn-clone = "1.0"
downcast-rs = "1.2"

# State management
im = "15"  # Immutable data structures
dashmap = "5.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance testing
criterion = "0.5"

[workspace]