[package]
name = "state-model-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "event-sourced"
path = "src/event_sourced.rs"

[[bin]]
name = "lazy-twins"
path = "src/lazy_twins.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Event storage
sled = "0.34"  # Embedded DB for event log
bincode = "1.3"  # Fast binary serialization

# State management
dashmap = "5.5"
arc-swap = "1.6"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

[workspace]